src/main/k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-k8s-configmap-demo
  labels:
    app: spring-k8s-configmap-demo
  namespace: kk-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-k8s-configmap-demo
  template:
    metadata:
      labels:
        app: spring-k8s-configmap-demo
    spec:
      serviceAccountName: kk-svc
      containers:
        - name: spring-k8s-configmap-demo
          image: eu.gcr.io/kk-poc-307414/com/kitkit/spring-k8s-configmap-demo:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/info
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
          resources:
            requests:
              memory: "10Mi"
              cpu: "0"
            limits:
              memory: "1Gi"
              cpu: "0.5"
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
