src/main/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-k8s-configmap-demo
  namespace: default
spec:
  selector:
    app: spring-k8s-configmap-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
